TAG: entrezgeneload-3-2-0-6
TAG: entrezgeneload-3-2-0-5
TAG: entrezgeneload-3-2-0-4
TAG: entrezgeneload-3-2-0-3
DATE: 05/24/2005
STAFF: lec
CHANGES:
1) TR 6046; removed mouse (replaced by egload)

TAG: entrezgeneload-tr6046-BP
DATE: 05/05/2005
STAFF: mbw

TAG: entrezgeneload-3-2-0-2
TAG: entrezgeneload-3-2-0-1
DATE: 05/02/2005
STAFF: lec
CHANGES:
2) TR 3853, OMIM merge

TAG: entrezgeneload-omim-2
DATE: 05/02/2005
STAFF: lec
CHANGES:
1) TR 3853, OMIM

TAG: entrezgeneload-omim-1
DATE: 04/29/2005
STAFF: lec
CHANGES:
1) load all human and rat markers
2) load OMIM annotations for human

TAG: entrezgeneload-omim-BP
DATE: 04/27/2005
STAFF: lec
CHANGES:
2) OMIM branch

TAG: entrezgeneload-3-1-1-8
DATE: 02/25/2005
STAFF: lec
CHANGES:
2) add NCBI Gene Model to mouse

TAG: entrezgeneload-3-1-1-7
DATE: 02/18/2005
STAFF: lec
CHANGES:
2) add NCBI Gene Model to mouse

TAG: entrezgeneload-3-1-1-6
TAG: entrezgeneload-3-1-1-5
DATE: 02/09/2005
STAFF: lec
CHANGES: MGI 3.11, TR 5626
2) only load mouse, human, rat into DP tables

TAG: entrezgeneload-3-1-1-4
DATE: 01/31/2005
STAFF: lec
CHANGES: MGI 3.11, TR 5626
2) new EntrezGene format: geneinfo

TAG: entrezgeneload-3-1-1-3
DATE: 01/26/2005
STAFF: lec
CHANGES: MGI 3.11, TR 5626

TAG: entrezgeneload-3-1-1-2
TAG: entrezgeneload-3-1-1-1
DATE: 01/25/2005
STAFF: lec
CHANGES: MGI 3.11, TR 5626

TAG: entrezgeneload-3-1-0-15
DATE: 01/21/2005
STAFF: lec
CHANGES: TR 5939, TR 5173

TAG: entrezgeneload-3-1-0-14
TAG: entrezgeneload-3-1-0-13
DATE: 01/18/2005
STAFF: lec
CHANGES: TR 5939, TR 5173

TAG: entrezgeneload-3-1-0-12
DATE: 01/13/2005
STAFF: lec
CHANGES: TR 5939

TAG: entrezgeneload-3-1-0-11
TAG: entrezgeneload-3-1-0-10
TAG: entrezgeneload-3-1-0-9
DATE: 01/12/2005
STAFF: lec
CHANGES: TR 5939

TAG: entrezgeneload-3-1-0-8
TAG: entrezgeneload-3-1-0-7
DATE: 01/05/2005
STAFF: lec
CHANGES: TR 5939

TAG: entrezgeneload-3-1-0-6
TAG: entrezgeneload-3-1-0-5
TAG: entrezgeneload-3-1-0-4
DATE: 01/04/2005
STAFF: lec
CHANGES: TR 5939
