@@ -13,23 +13,6 @@ EntrezGene Load: Data and QC Reports
 <LI><A HREF="/data/loads/entrezgene/entrezgeneload/input/gene_history">History File</A>
 </UL>
 
-<H4>Mouse Reports</H4>
-<UL>
-<LI><A HREF="/data/loads/entrezgene/entrezgeneload/output/mouse/preload0.sql.rpt">Bucket 0 - MGI Acc ID Match; Seq ID Match - Good to Load</A>
-<LI><A HREF="/data/loads/entrezgene/entrezgeneload/output/mouse/preload1.sql.rpt">Bucket 1 - EntrezGene IDs which map to non Gene/Pseudogene MGI Markers</A>
-<LI><A HREF="/data/loads/entrezgene/entrezgeneload/output/mouse/preload2.sql.rpt">Bucket 2 - Seq IDs which map to > 1 MGI Marker + Problem Clones</A>
-<LI><A HREF="/data/loads/entrezgene/entrezgeneload/output/mouse/preload3.sql.rpt">Bucket 3 - EntrezGene IDs with different Seq IDs which map to different MGI Markers</A>
-<LI><A HREF="/data/loads/entrezgene/entrezgeneload/output/mouse/preload4.sql.rpt">Bucket 4 - MGI Acc ID Match; EntrezGene has no SeqID; MGD has no SeqID</A>
-<LI><A HREF="/data/loads/entrezgene/entrezgeneload/output/mouse/preload5.sql.rpt">Bucket 5 - MGI Acc ID Match; EntrezGene has SeqID; MGD has no SeqID</A>
-<LI><A HREF="/data/loads/entrezgene/entrezgeneload/output/mouse/preload6.sql.rpt">Bucket 6 - MGI Acc ID Match; EntrezGene has no SeqID; MGD has SeqID</A>
-<LI><A HREF="/data/loads/entrezgene/entrezgeneload/output/mouse/preload7.sql.rpt">Bucket 7 - MGI Acc ID Match; EntrezGene has SeqID; MGD has SeqID; not in Bucket 0,1,2</A>
-<LI><A HREF="/data/loads/entrezgene/entrezgeneload/output/mouse/preload8.sql.rpt">Bucket 8 - EntrezGene records with no MGD Acc ID match</A>
-<LI><A HREF="/data/loads/entrezgene/entrezgeneload/output/mouse/preload9.sql.rpt">Bucket 9 - EntrezGene records from Bucket 0 with non-mRNA SeqIDs not in MGD</A>
-<LI><A HREF="/data/loads/entrezgene/entrezgeneload/output/mouse/preload10.rpt">Bucket 10 - EntrezGene Mouse Symbols w/ Unpublished GenBank ID; GenBank ID Not Attached to MGD Marker</A>
-<LI><A HREF="/data/loads/entrezgene/entrezgeneload/output/mouse/preload11.rpt">Bucket 11 - EntrezGene Mouse Symbols w/ Published GenBank ID; GenBank ID Not Attached to MGD Marker; Reference in MGD</A>
-<LI><A HREF="/data/loads/entrezgene/entrezgeneload/output/mouse/preload12.rpt">Bucket 12 - EntrezGene Mouse Symbols w/ Published GenBank ID; GenBank ID Not Attached to MGD Marker; Reference not in MGD</A>
-</UL>
-
 <H4>Human Reports</H4>
 <UL>
 <LI><A HREF="/data/loads/entrezgene/entrezgeneload/output/human/preload0.sql.rpt">Bucket 0: Nomenclature Updates Processed</A>
