@@ -1,3 +1,9 @@
+TAG: entrezgeneload-3-2-0-7
+DATE: 05/25/2005
+STAFF: lec
+CHANGES:
+1) TR 6046; removed mouse (replaced by egload)
+
 TAG: entrezgeneload-3-2-0-6
 TAG: entrezgeneload-3-2-0-5
 TAG: entrezgeneload-3-2-0-4
